styles.css
/* Basic Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
}

body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    background-color: #ffffff;
    color: #3a2424;
    display: flex;
    flex-direction: column;
}

.wrapper {
    flex: 1;
}

/* Header Styles */
.header-default {
    background: #3a2424;
    color: #fff;
    padding: 1rem 0;
    text-align: center;
}

/* Navigation Styles */
.nav-default {
    background: #5f3b3b;
    color: #00000000;
    padding: 0.5rem;
    text-align: center;
}

.nav-default ul {
    list-style: none;
}

.nav-default ul li {
    display: inline;
    margin: 0 1rem;
}

.nav-default ul li a {
    color: #ffffff;
    text-decoration: none;
}

.nav-default ul li a:hover {
    text-decoration: underline;
}

/* Main Content Styles */
.main-default {
    padding: 1rem;
    flex: 1;
}

/* Section Styles */
.section-default {
    margin-bottom: 1rem;
    padding: 1rem;
    background: #e9e9e9;
    border: 1px solid #ddd;
}

/* Footer Styles */
.footer-default {
    text-align: center;
    padding: 1rem 0;
    background: #3a2424;
    color: #fff;
}

.founders-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.founders-content {
    flex: 1;
    margin-right: 1rem;
}

.founder-image {
    max-width: 10%;
    height: auto;
}

.Logo
{
    max-width: 4%;
    float: right;
    height: auto; 
    margin-top: -10px;
}

